# windows-operating_system

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  _.cmake  __.cmake
a_spaboot/operating_system-windows/: deployment.rc
acme_windows/operating_system-windows/: deployment.rc
acme_windows_common/operating_system-windows_common/: deployment.rc
admin/operating_system-windows/: deployment.rc
apex_windows/operating_system-windows/: deployment.rc
apex_windows_common/operating_system-windows_common/: deployment.rc
app._/operating_system-windows/: deployment.rc
app/operating_system-windows/: deployment.rc
app_app/operating_system-windows/: deployment.rc
app_app_admin/operating_system-windows/: deployment.rc
app_app_install/operating_system-windows/: deployment.rc
app_app_nest/operating_system-windows/: deployment.rc
app_app_remove/operating_system-windows/: deployment.rc
app_chromium/operating_system-windows/: deployment.rc
audio_directsound/operating_system-windows/: deployment.rc
audio_mixer_mmsystem/operating_system-windows/: deployment.rc
audio_mixer_xaudio/operating_system-windows_common/: deployment.rc
audio_mmsystem/operating_system-windows/: deployment.rc
audio_xaudio/operating_system-windows_common/: deployment.rc
audio_xaudio7/operating_system-windows/: deployment.rc
aura_windows/operating_system-windows/: deployment.rc
aura_windows_common/operating_system-windows_common/: deployment.rc
backup/operating_system-windows/: deployment.rc
bergedge/operating_system-windows/: deployment.rc
direct2d/operating_system-windows_common/: deployment.rc
directx/operating_system-windows_common/: deployment.rc
draw2d_direct2d/operating_system-windows_common/: deployment.rc
draw2d_gdi/operating_system-windows/: deployment.rc
draw2d_gdiplus/operating_system-windows/: deployment.rc
imaging_wic/operating_system-windows_common/: deployment.rc
install_service/operating_system-windows/: deployment.rc
libcef_dll_wrapper/operating_system-windows/: deployment.rc
multimedia_directsound/operating_system-windows/: deployment.rc
multimedia_mmsystem/operating_system-windows/: deployment.rc
multimedia_xaudio/operating_system-windows_common/: deployment.rc
multimedia_xaudio7/operating_system-windows/: deployment.rc
music_midi_mmsystem/operating_system-windows/: deployment.rc
music_midi_xaudio/operating_system-windows_common/: deployment.rc
node_windows/operating_system-windows/: deployment.rc
operating_system/operating_system-windows/: deployment.rc
post-commit/operating_system-windows/: deployment.rc
production/operating_system-windows/: deployment.rc
ssl/operating_system-windows/: deployment.rc
storage_akrip/operating_system-windows/: deployment.rc
third/operating_system-windows/: deployment.rc
tls_session_reuse/operating_system-windows/: deployment.rc
tts_sapi/operating_system-windows_common/: deployment.rc
win32/operating_system-windows/: deployment.rc
windowing_win32/operating_system-windows/: deployment.rc
write_text_direct2d/operating_system-windows_common/: deployment.rc
(+2 files in other folders)
