cmake_minimum_required(VERSION 3.17)
project(operating_system)


if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
add_subdirectory(operating_system-windows_common/acme_windows_common)
add_subdirectory(operating_system-windows/acme_windows)
add_subdirectory(operating_system-windows_common/apex_windows_common)
add_subdirectory(operating_system-windows/apex_windows)
add_subdirectory(operating_system-windows_common/aura_windows_common)
add_subdirectory(operating_system-windows/aura_windows)
add_subdirectory(operating_system-windows/node_windows)
add_subdirectory(operating_system-windows/windowing_win32)
add_subdirectory(operating_system-windows/write_text_win32)
add_subdirectory(operating_system-windows/draw2d_gdiplus)
add_subdirectory(operating_system-windows/audio_mmsystem)
add_subdirectory(operating_system-windows/input_win32)


add_subdirectory(operating_system-windows_common/imaging_wic)
endif()